# ChangeLog for media-sound/alsa-driver
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/Attic/ChangeLog,v 1.270 2007/05/01 09:38:12 corsair Exp $

  01 May 2007; Markus Rothe <corsair@gentoo.org>
  alsa-driver-1.0.14_rc2-r1.ebuild:
  Stable on ppc64; bug #175141

  26 Apr 2007; Steve Dibb <beandog@gentoo.org>
  alsa-driver-1.0.14_rc2-r1.ebuild:
  amd64 stable, bug 175141

  22 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  alsa-driver-1.0.14_rc2-r1.ebuild:
  x86 stable wrt #175141

  22 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  alsa-driver-1.0.14_rc2-r1.ebuild:
  ppc stable, bug #175141

  19 Apr 2007; Andrej Kacian <ticho@gentoo.org>
  alsa-driver-1.0.14_rc2.ebuild:
  Stable on x86 for 2.6.20 kernel. Bugs #173702 and #175171.

  22 Mar 2007; Christian Heim <phreak@gentoo.org>
  -alsa-driver-1.0.14_rc2_p3234.ebuild:
  Cleaning up some older versions.

*alsa-driver-1.0.14_rc3 (17 Mar 2007)

  17 Mar 2007; Petteri Räty <betelgeuse@gentoo.org>
  +files/1.0.14_rc3-configure.in-core2.patch,
  +alsa-driver-1.0.14_rc3.ebuild:
  Version bump. Thanks to Diego Pettenò <flameeyes@gmail.com>.

  11 Feb 2007; Simon Stelling <blubb@gentoo.org>
  alsa-driver-1.0.14_rc1.ebuild:
  stable on amd64; bug 158678

  05 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  alsa-driver-1.0.14_rc1.ebuild:
  Stable on alpha wrt bug #158678.

*alsa-driver-1.0.14_rc2_p3234 (04 Feb 2007)

  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  +alsa-driver-1.0.14_rc2_p3234.ebuild:
  Add a new snapshot required for kernel 2.6.20.

*alsa-driver-1.0.14_rc2-r1 (30 Jan 2007)

  30 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  +alsa-driver-1.0.14_rc2-r1.ebuild, alsa-driver-9999.ebuild:
  Make MIDI sequencer support optional on midi useflag, thanks to Sascha
  Geschwandtner in bug #163513 for reporting.

  27 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  alsa-driver-1.0.14_rc2.ebuild, alsa-driver-9999.ebuild: