@@ -1,0 +1,3 @@
+MD5 78232c1c38db6a1f4e1d304e2cc1f660 alsa-driver-1.0.14.tar.bz2 2600096
+RMD160 2d017ed11bd037e450ffa969602f84cc104e5b72 alsa-driver-1.0.14.tar.bz2 2600096
+SHA256 4987c05fd5516f9cb36ff4b73ccb77300124423b2bd6c66260eed73317529eca alsa-driver-1.0.14.tar.bz2 2600096
