@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/alsa-driver
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/Attic/ChangeLog,v 1.270 2007/05/01 09:38:12 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/Attic/ChangeLog,v 1.271 2007/06/28 15:16:38 chainsaw Exp $
+
+*alsa-driver-1.0.14 (28 Jun 2007)
+
+  28 Jun 2007; Tony Vroon <chainsaw@gentoo.org> +alsa-driver-1.0.14.ebuild:
+  Version bump, closes bug #171872. Clean-up of older ALSA modules will now be
+  nice and silent thanks to András <bogar@hej.hu>, closes bug #182773.
 
   01 May 2007; Markus Rothe <corsair@gentoo.org>
   alsa-driver-1.0.14_rc2-r1.ebuild:
